update package.json and package-lock.json to add http dependency; modify HTML files for favicon path and add navigation scripts; enhance admin.js with socket connection and event listeners

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <title>Pyramid</title>
     <link rel="stylesheet" type="text/css" href="css/pyramid.css">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<div>
-		<button>Administrar</button>
-		<button>Jugar</button>
+		<button id="admin">Administrar</button>
+		<button id="jugar">Jugar</button>
 	</div>
+	<script>
+		document.getElementById('admin').addEventListener('click', () => {
+			window.location.href = 'http://localhost:3000/admin';
+		});
+		document.getElementById('jugar').addEventListener('click', () => {
+			window.location.href = 'http://localhost:3000/jugar';
+		});
+	</script>
 </body>
 </html>
