--- a/public/admin.html
+++ b/public/admin.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Pyramid (admin)</title>
     <link rel="stylesheet" type="text/css" href="css/pyramid.css">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+	<script defer src="http://localhost:8180/socket.io/socket.io.js"></script>
 	<script src="js/pyramid.js"></script>
 	<script defer src="js/admin.js"></script>
 </head>
