--- a/public/admin.html
+++ b/public/admin.html
@@ -18,7 +18,7 @@
 		<button id="engegar">Engegar</button>
 	</div>
 	<div>
-		<svg width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
+		<svg id="canvas" width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
 			<g id="pyramid"></g>
 			<g id="players"></g>
 			<g id="stones"></g>
