--- a/public/player.html
+++ b/public/player.html
@@ -7,13 +7,14 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<script src="js/pyramid.js"></script>
 	<script defer src="js/player.js"></script>
+	<script defer src="http://localhost:8180/socket.io/socket.io.js"></script>
 </head>
 <body>
 	<div>
 		<label for="pisos">Pisos de la piràmide</label> <input type="number" id="pisos" step="1" value="8" min="4" max="8" disabled /><br>
 	</div>
 	<div>
-		<svg width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
+		<svg id=canvas 	width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
 			<g id="pyramid"></g>
 			<g id="players"></g>
 			<g id="stones"></g>
