add authentication with Google OAuth; configure session management and protect routes; update HTML and CSS for login interface

--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,27 @@
 <html lang="ca">
 <head>
     <meta charset="UTF-8">
-    <title>Pyramid</title>
-    <link rel="stylesheet" type="text/css" href="css/pyramid.css">
-	<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/favicon2.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/login.css">
+    <title>Login</title>
 </head>
 <body>
-	<div>
-		<button id="admin">Administrar</button>
-		<button id="jugar">Jugar</button>
-	</div>
-	<script>
-		document.getElementById('admin').addEventListener('click', () => {
-			window.location.href = 'http://localhost:3000/admin';
-		});
-		document.getElementById('jugar').addEventListener('click', () => {
-			window.location.href = 'http://localhost:3000/jugar';
-		});
-	</script>
+  <div class="login">
+    <form class="form" action="/auth/google">
+      <p id="error-message"></p>
+        <p class="form-title">Inicia sessió al teu compte</p>
+          <button type="submit" class="submit">
+         Inicia sessió
+             </button>
+    </form>
+  </div>
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const errorMessage = urlParams.get('error');
+    if (errorMessage) {
+      document.getElementById('error-message').textContent = errorMessage;
+    }
+  </script>
 </body>
 </html>
