--- a/public/player.html
+++ b/public/player.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <title>Pyramid (player)</title>
     <link rel="stylesheet" type="text/css" href="css/pyramid.css">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="assets/favicon2.ico" type="image/x-icon">
+	<script defer src="http://localhost:8180/socket.io/socket.io.js"></script>
 	<script src="js/pyramid.js"></script>
 	<script defer src="js/player.js"></script>
-	<script defer src="http://localhost:8180/socket.io/socket.io.js"></script>
 </head>
 <body>
-	<div>
+	<h1>Pyramid Game</h1>
+    <div class="settings">
 		<label for="pisos">Pisos de la piràmide</label> <input type="number" id="pisos" step="1" value="8" min="4" max="8" disabled /><br>
 	</div>
 	<div>
@@ -22,3 +23,4 @@
 	</div>
 </body>
 </html>
+
