--- a/public/admin.html
+++ b/public/admin.html
@@ -15,7 +15,7 @@
 		<label for="height">Alçada (480-960)</label> <input type="number" id="height" step="16" value="480" min="480" max="960" /><br>
 		<label for="pisos">Pisos de la piràmide (4-8)</label> <input type="number" id="pisos" step="1" value="8" min="4" max="8" /><br>
 		<button id="configurar">Configurar</button>
-		<button id="engegar">Engegar</button>
+		<button id="engegar">Engegar</button> <br><br>
 	</div>
 	<div>
 		<svg id="canvas" width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
