--- a/public/player.html
+++ b/public/player.html
@@ -15,6 +15,7 @@
 		<label for="pisos">Pisos de la piràmide</label> <input type="number" id="pisos" step="1" value="8" min="4" max="8" disabled /><br>
 	</div>
 	<div>
+		<p id="message"></p>
 		<svg id=canvas 	width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
 			<g id="pyramid"></g>
 			<g id="players"></g>
