add base management and enhance player/stones rendering; update canvas structure and styles

--- a/public/admin.html
+++ b/public/admin.html
@@ -19,9 +19,11 @@
 	</div>
 	<div>
 		<svg id="canvas" width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
-			<g id="pyramid"></g>
+			
 			<g id="players"></g>
 			<g id="stones"></g>
+			<g id="bases"></g>
+			<g id="pyramid"></g>
 		</svg>
 	</div>
 </body>
