--- a/public/player.html
+++ b/public/player.html
@@ -5,11 +5,13 @@
     <title>Pyramid (player)</title>
     <link rel="stylesheet" type="text/css" href="css/pyramid.css">
 	<link rel="icon" href="assets/favicon2.ico" type="image/x-icon">
-	<script defer src="http://localhost:8180/socket.io/socket.io.js"></script>
-	<script src="js/pyramid.js"></script>
+	<script src="http://localhost:8180/socket.io/socket.io.js"></script>
+	<script  src="https://cdn.jsdelivr.net/npm/nipplejs@0.9.0/dist/nipplejs.min.js"></script>
 	<script defer src="js/player.js"></script>
 </head>
 <body>
+	<div id="joystick-container"></div>
+    <button id="action-button">Agafar</button>
 	<h1>Pyramid Game</h1>
     <div class="settings">
 		<label for="pisos">Pisos de la piràmide</label> <input type="number" id="pisos" step="1" value="8" min="4" max="8" disabled /><br>
