refactor: enhance error message styling; update SVG elements and clean up unused code

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="login">
     <form class="form" action="/auth/google">
-      <p id="error-message"></p>
+      <p id="error-message" class="error"></p>
         <p class="form-title">Inicia sessió al teu compte</p>
           <button type="submit" class="submit">
          Inicia sessió
