--- a/public/admin.html
+++ b/public/admin.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="css/pyramid.css">
 	<link rel="icon" href="assets/favicon2.ico" type="image/x-icon">
 	<script defer src="http://localhost:8180/socket.io/socket.io.js"></script>
-	<script src="js/pyramid.js"></script>
 	<script defer src="js/admin.js"></script>
 </head>
 <body>
@@ -18,12 +17,11 @@
 		<button id="engegar">Engegar</button> <br><br>
 	</div>
 	<div>
-		<svg id="canvas" width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
-			
-			<g id="players"></g>
+		<svg width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
 			<g id="stones"></g>
 			<g id="bases"></g>
 			<g id="pyramid"></g>
+			<g id="players"></g>
 		</svg>
 	</div>
 </body>
