refactor: remove unused assets and update SVG element IDs; add README for project documentation

--- a/public/player.html
+++ b/public/player.html
@@ -18,7 +18,7 @@
 	</div>
 	<div>
 		<p id="message"></p>
-		<svg width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
+		<svg id="canvas" width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
 			<g id="stones"></g>
 			<g id="bases"></g>
 			<g id="pyramid"></g>
