--- a/public/admin.html
+++ b/public/admin.html
@@ -17,7 +17,7 @@
 		<button id="engegar">Engegar</button> <br><br>
 	</div>
 	<div>
-		<svg width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
+		<svg id="canvas" width="640" height="480" viewBox="0 0 640 480" style="border:1px solid black">
 			<g id="stones"></g>
 			<g id="bases"></g>
 			<g id="pyramid"></g>
